added hygiene route, model, controller, api doc
