# routes/index.js
@@ -9,6 +9,7 @@ const cors = require('cors');
 //routes
 const docRoutes = require('./swagger');
 const userRoutes = require('./user');
+const hygieneRoutes = require('./hygiene');
 
 router.options(
   cors({
@@ -19,5 +20,6 @@ router.options(
 router.use('/', docRoutes);
 router.use([openCors, express.json()]);
 router.use('/users', userRoutes);
+router.use('/hygienes', hygieneRoutes);
 
 module.exports = router;
